@@ -2,7 +2,7 @@
 #define _NABI_SESSION_H
 
 #ifdef HAVE_LIBSM
-void nabi_session_open(void);
+void nabi_session_open(char *previos_id);
 void nabi_session_close(void);
 #endif
 
