@@ -1,3 +1,8 @@
+2003-12-20  Choe Hwanjin <krisna@kldp.org>
+	* src/nabi.h,src/session.h,src/session.c,src/ui.c,src/main.c:
+	  세션 기능을 구현, 세션저장만 하면 다음번에 제대로 다시 뜨게함,
+	  또 프로그램이 죽게되면 자동으로 다시 띄우도록 기본값을 줌
+
 2003-12-18  Choe Hwanjin <krisna@kldp.org>
 	* release 0.12
 
